Finish navi styling(desktop, mobile) + hero section

--- a/index.html
+++ b/index.html
@@ -21,27 +21,33 @@
     <title>Frontend Mentor | Loopstudios landing page</title>
   </head>
   <body>
-    <header class="flex flex-row justify-between align-center">
-      <img src="images/logo.svg" alt="Loopstudio Logo" />
+    <header class="web-navi flex flex-row justify-between align-center">
+      <img class="logo" src="images/logo.svg" alt="Loopstudio Logo" />
       <div class="navi-wrapper flex flex-row align-center">
         <img
-          class="icon menu-open"
+          id="navi-open-btn"
+          class="cursor-pointer"
           src="images/icon-hamburger.svg"
           alt="Menu open button"
         />
         <nav class="navi-list flex flex-row">
-          <a href="">About</a>
-          <a href="">Careers</a>
-          <a href="">Events</a>
-          <a href="">Products</a>
-          <a href="">Support</a>
+          <a class="navi-link" href="">About</a>
+          <a class="navi-link" href="">Careers</a>
+          <a class="navi-link" href="">Events</a>
+          <a class="navi-link" href="">Products</a>
+          <a class="navi-link" href="">Support</a>
         </nav>
       </div>
     </header>
-    <div class="navi-wrapper-mobile">
+    <div id="navi-wrapper-mobile" class="flex flex-column hidden">
       <div class="flex flex-row justify-between align-center">
         <img src="images/logo.svg" alt="Loopstudio Logo" />
-        <img src="images/icon-close.svg" alt="Menu close button" />
+        <img
+          id="navi-close-btn"
+          class="cursor-pointer"
+          src="images/icon-close.svg"
+          alt="Menu close button"
+        />
       </div>
       <nav class="navi-list-mobile flex flex-column">
         <a href="">About</a>
@@ -54,6 +60,7 @@
     <main>
       <section class="hero-section">
         <img
+          class="hero-section-img"
           src="images/mobile/image-hero.jpg"
           alt="Image for section Immersive experiences that deliver image"
         />
@@ -62,19 +69,19 @@
         </div>
       </section>
       <article>
-        <header>
-          <img
-            src="images/mobile/image-interactive.jpg"
-            alt="Image for section the leader in interactive VR "
-          />
+        <img
+          src="images/mobile/image-interactive.jpg"
+          alt="Image for section the leader in interactive VR "
+        />
+        <div class="content-wrapper">
           <h2>The leader in interactive VR</h2>
-        </header>
-        <p>
-          Founded in 2011, Loopstudios has been producing world-class virtual
-          reality projects for some of the best companies around the globe. Our
-          award-winning creations have transformed businesses through digital
-          experiences that bind to their brand.
-        </p>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
       </article>
       <section class="creations-wrapper grid">
         <h2>Our creations</h2>
@@ -164,5 +171,6 @@
       </div>
       <p>© 2021 Loopstudios. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
