--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="">Support</a>
       </nav>
     </div>
-    <main>
+    <main class="flex flex-column">
       <section class="hero-section">
         <img
           class="hero-section-img"
@@ -68,75 +68,77 @@
           <h1>Immersive experiences that deliver</h1>
         </div>
       </section>
-      <article>
-        <img
-          src="images/mobile/image-interactive.jpg"
-          alt="Image for section the leader in interactive VR "
-        />
-        <div class="content-wrapper">
-          <h2>The leader in interactive VR</h2>
-          <p>
-            Founded in 2011, Loopstudios has been producing world-class virtual
-            reality projects for some of the best companies around the globe.
-            Our award-winning creations have transformed businesses through
-            digital experiences that bind to their brand.
-          </p>
-        </div>
-      </article>
-      <section class="creations-wrapper grid">
-        <h2>Our creations</h2>
-        <button>See all</button>
-        <div class="creations-list grid">
-          <figure>
-            <img
-              src="images/mobile/image-deep-earth.jpg"
-              alt="Image for creation deep earth"
-            /><span>Deep earth</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-night-arcade.jpg"
-              alt="Image for creation night arcade"
-            /><span>Night arcade</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-soccer-team.jpg"
-              alt="Image for creation soccer team VR"
-            /><span>Soccer team VR</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-grid.jpg"
-              alt="Image for creation grid"
-            /><span>The grid</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-from-above.jpg"
-              alt="Image for creation from up above VR"
-            /><span>From up above VR</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-pocket-borealis.jpg"
-              alt="Image for creation pocket borealis"
-            /><span>Pocket Borealis</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-curiosity.jpg"
-              alt="Image for creation the curiosity"
-            /><span>The curiosity</span>
-          </figure>
-          <figure>
-            <img
-              src="images/mobile/image-fisheye.jpg"
-              alt="Image for creation make it fisheye"
-            /><span>Make it fisheye</span>
-          </figure>
-        </div>
-      </section>
+      <div class="main-content-container">
+        <article class="info-wrapper">
+          <img
+            src="images/mobile/image-interactive.jpg"
+            alt="Image for section the leader in interactive VR "
+          />
+          <div class="info-content-wrapper">
+            <h2>The leader in interactive VR</h2>
+            <p>
+              Founded in 2011, Loopstudios has been producing world-class
+              virtual reality projects for some of the best companies around the
+              globe. Our award-winning creations have transformed businesses
+              through digital experiences that bind to their brand.
+            </p>
+          </div>
+        </article>
+        <section class="creations-wrapper grid">
+          <h2>Our creations</h2>
+          <button>See all</button>
+          <div class="creations-list grid">
+            <figure>
+              <img
+                src="images/mobile/image-deep-earth.jpg"
+                alt="Image for creation deep earth"
+              /><span>Deep earth</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-night-arcade.jpg"
+                alt="Image for creation night arcade"
+              /><span>Night arcade</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-soccer-team.jpg"
+                alt="Image for creation soccer team VR"
+              /><span>Soccer team VR</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-grid.jpg"
+                alt="Image for creation grid"
+              /><span>The grid</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-from-above.jpg"
+                alt="Image for creation from up above VR"
+              /><span>From up above VR</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-pocket-borealis.jpg"
+                alt="Image for creation pocket borealis"
+              /><span>Pocket Borealis</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-curiosity.jpg"
+                alt="Image for creation the curiosity"
+              /><span>The curiosity</span>
+            </figure>
+            <figure>
+              <img
+                src="images/mobile/image-fisheye.jpg"
+                alt="Image for creation make it fisheye"
+              /><span>Make it fisheye</span>
+            </figure>
+          </div>
+        </section>
+      </div>
     </main>
     <footer class="flex flex-column">
       <img src="images/logo.svg" alt="Loopstudio logo" />
