Finish styling main (desktop, mobile)

--- a/index.html
+++ b/index.html
@@ -85,53 +85,63 @@
           </div>
         </article>
         <section class="creations-wrapper grid">
-          <h2>Our creations</h2>
-          <button>See all</button>
+          <h2 class="creations-list-header">Our creations</h2>
+          <div class="btn-wrapper flex justify-center align-center">
+            <button class="cursor-pointer" id="see-all-btn">See all</button>
+          </div>
           <div class="creations-list grid">
             <figure>
               <img
+                id="image-deep-earth"
                 src="images/mobile/image-deep-earth.jpg"
                 alt="Image for creation deep earth"
               /><span>Deep earth</span>
             </figure>
             <figure>
               <img
+                id="image-night-arcade"
                 src="images/mobile/image-night-arcade.jpg"
                 alt="Image for creation night arcade"
               /><span>Night arcade</span>
             </figure>
             <figure>
               <img
+                id="image-soccer-team"
                 src="images/mobile/image-soccer-team.jpg"
                 alt="Image for creation soccer team VR"
               /><span>Soccer team VR</span>
             </figure>
             <figure>
               <img
+                id="image-grid"
                 src="images/mobile/image-grid.jpg"
                 alt="Image for creation grid"
               /><span>The grid</span>
             </figure>
             <figure>
               <img
+                id="image-from-above"
                 src="images/mobile/image-from-above.jpg"
                 alt="Image for creation from up above VR"
               /><span>From up above VR</span>
             </figure>
             <figure>
               <img
+                id="image-pocket-borealis"
                 src="images/mobile/image-pocket-borealis.jpg"
                 alt="Image for creation pocket borealis"
               /><span>Pocket Borealis</span>
             </figure>
             <figure>
               <img
+                id="image-curiosity"
                 src="images/mobile/image-curiosity.jpg"
                 alt="Image for creation the curiosity"
               /><span>The curiosity</span>
             </figure>
             <figure>
               <img
+                id="image-fisheye"
                 src="images/mobile/image-fisheye.jpg"
                 alt="Image for creation make it fisheye"
               /><span>Make it fisheye</span>
