--- a/index.html
+++ b/index.html
@@ -150,38 +150,42 @@
         </section>
       </div>
     </main>
-    <footer class="flex flex-column">
-      <img src="images/logo.svg" alt="Loopstudio logo" />
-      <div class="footer-navi flex flex-column">
-        <a href="">About</a>
-        <a href="">Careers</a>
-        <a href="">Events</a>
-        <a href="">Products</a>
-        <a href="">Support</a>
+    <footer class="footer flex flex-column">
+      <div class="flex flex-column align-center">
+        <img class="footer-logo" src="images/logo.svg" alt="Loopstudio logo" />
+        <div class="footer-navi flex flex-column justify-center align-center">
+          <a class="footer-navi-link" href="">About</a>
+          <a class="footer-navi-link" href="">Careers</a>
+          <a class="footer-navi-link" href="">Events</a>
+          <a class="footer-navi-link" href="">Products</a>
+          <a class="footer-navi-link" href="">Support</a>
+        </div>
       </div>
-      <div class="social-links-list">
-        <img
-          src="images/icon-facebook.svg"
-          alt="Link to Facebook"
-          class="social-link"
-        />
-        <img
-          src="images/icon-twitter.svg"
-          alt="Link to Twitter"
-          class="social-link"
-        />
-        <img
-          src="images/icon-pinterest.svg"
-          alt="Link to Pinterest"
-          class="social-link"
-        />
-        <img
-          src="images/icon-instagram.svg"
-          alt="Link to Instagram"
-          class="social-link"
-        />
+      <div class="flex flex-column align-center">
+        <div class="social-links-list flex align-center justify-center">
+          <img
+            src="images/icon-facebook.svg"
+            alt="Link to Facebook"
+            class="social-link"
+          />
+          <img
+            src="images/icon-twitter.svg"
+            alt="Link to Twitter"
+            class="social-link"
+          />
+          <img
+            src="images/icon-pinterest.svg"
+            alt="Link to Pinterest"
+            class="social-link"
+          />
+          <img
+            src="images/icon-instagram.svg"
+            alt="Link to Instagram"
+            class="social-link"
+          />
+        </div>
+        <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
       </div>
-      <p>© 2021 Loopstudios. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
