Fix styling footer

--- a/index.html
+++ b/index.html
@@ -154,34 +154,34 @@
       <div class="flex flex-column align-center">
         <img class="footer-logo" src="images/logo.svg" alt="Loopstudio logo" />
         <div class="footer-navi flex flex-column justify-center align-center">
-          <a class="footer-navi-link" href="">About</a>
-          <a class="footer-navi-link" href="">Careers</a>
-          <a class="footer-navi-link" href="">Events</a>
-          <a class="footer-navi-link" href="">Products</a>
-          <a class="footer-navi-link" href="">Support</a>
+          <a class="footer-navi-link cursor-pointer" href="">About</a>
+          <a class="footer-navi-link cursor-pointer" href="">Careers</a>
+          <a class="footer-navi-link cursor-pointer" href="">Events</a>
+          <a class="footer-navi-link cursor-pointer" href="">Products</a>
+          <a class="footer-navi-link cursor-pointer" href="">Support</a>
         </div>
       </div>
       <div class="flex flex-column align-center">
-        <div class="social-links-list flex align-center justify-center">
+        <div class="social-links-list flex align-center">
           <img
             src="images/icon-facebook.svg"
             alt="Link to Facebook"
-            class="social-link"
+            class="social-link cursor-pointer"
           />
           <img
             src="images/icon-twitter.svg"
             alt="Link to Twitter"
-            class="social-link"
+            class="social-link cursor-pointer"
           />
           <img
             src="images/icon-pinterest.svg"
             alt="Link to Pinterest"
-            class="social-link"
+            class="social-link cursor-pointer"
           />
           <img
             src="images/icon-instagram.svg"
             alt="Link to Instagram"
-            class="social-link"
+            class="social-link cursor-pointer"
           />
         </div>
         <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
