--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           src="images/icon-hamburger.svg"
           alt="Menu open button"
         />
-        <nav class="navi-list flex flex-row">
+        <nav class="navi-list flex flex-row" aria-label="Homepage navigation">
           <a class="navi-link" href="">About</a>
           <a class="navi-link" href="">Careers</a>
           <a class="navi-link" href="">Events</a>
@@ -87,7 +87,9 @@
         <section class="creations-wrapper grid">
           <h2 class="creations-list-header">Our creations</h2>
           <div class="btn-wrapper flex justify-center align-center">
-            <button class="cursor-pointer" id="see-all-btn">See all</button>
+            <button type="button" class="cursor-pointer" id="see-all-btn">
+              See all
+            </button>
           </div>
           <div class="creations-list grid">
             <figure>
