Break down styles.scss file

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer flex flex-column">
+    <footer class="footer flex">
       <div class="flex flex-column align-center">
         <img class="footer-logo" src="images/logo.svg" alt="Loopstudio logo" />
         <div class="footer-navi flex flex-column justify-center align-center">
